--- a/ErasmusDDD.Domain/ErasmusDDD.Domain.csproj
+++ b/ErasmusDDD.Domain/ErasmusDDD.Domain.csproj
@@ -30,12 +30,18 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Compile Include="Entities\Livro.cs" />
+    <Compile Include="Interfaces\Repos\ILivroRepo.cs" />
+    <Compile Include="Interfaces\Repos\IRepoBase.cs" />
+    <Compile Include="Interfaces\Services\ILivroService.cs" />
+    <Compile Include="Interfaces\Services\IServiceBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\LivroService.cs" />
+    <Compile Include="Services\ServiceBase.cs" />
   </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
-    <Folder Include="Entities\" />
-    <Folder Include="Interfaces\" />
-    <Folder Include="Services\" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
