--- a/ErasmusDDD.MVC/Web.config
+++ b/ErasmusDDD.MVC/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="ErasmusDDD" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=ErasmusDDD;Integrated Security=True;AttachDBFilename=|DataDirectory|\ErasmusDDD.mdf" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
